--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
         <nav>
             <ul id="menu">
-                <li><a href="page2.html" id="infos">mes infos</a></li>
-                <li><a href="page2.html" id="projets">mes projets</a></li>
-                <li><a href="page2.html" id="exp">mes expériences pro</a></li>
-                <li><a href="mieuxmeconnaitre.html" id="exp">mieux me connaître</a></li>
+                <li><a href="#" id="infos">mes infos</a></li>
+                <li><a href="#" id="projets">mes projets</a></li>
+                <li><a href="#" id="exp">mes expériences pro</a></li>
+                <li><a href="#gt" id="exp">mieux me connaître</a></li>
             </ul>
         </nav>
 
