add boostrap and build content

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
         <nav>
             <ul id="menu">
-                <li><a href="#" id="projets">mes projets</a></li>
-                <li><a href="#" id="infos">mes compétences</a></li>
+                <li><a href="projet.html" id="projets">mes projets</a></li>
+                <li><a href="#" id="comp">mes compétences</a></li>
                 <li><a href="#" id="exp">mon exp pro</a></li>
                 <li><a href="mieuxmeconnaitre.html" id="meconnaître">mieux me connaître</a></li>
             </ul>
