--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>leeroynico- Web Developer</title>
         <link rel="stylesheet" href="styleportfolio.css" />
         <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
