--- a/mieuxmeconnaitre.html
+++ b/mieuxmeconnaitre.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Nicolas Leroy - mieux me connaître</title>
         <link rel="stylesheet" href="styleportfolio.css" />
         <link rel="stylesheet" href="styleportfolio2.css">
@@ -19,14 +20,14 @@
       
             <ul id="menuhaut">
                 <li><a href="index.html" id="home">home</a></li>
-                <li><a href="projet.html" id="projets">mes projets</a></li>
+                <li><a href="projets.html" id="projets">mes projets</a></li>
                 <li><a href="#" id="comp">mes compétences</a></li>
                 <li><a href="#" id="exp">mon exp pro</a></li>  
             </ul>
     </header>
 
    <section> 
-        <article id="les_speculos">
+        <article class="article1">
             <div>
             <h2>Les spéculos</h2>
             <p>On a créé une troupe de théâtre "Les spéculos" depuis quelques années (décennies)
@@ -42,7 +43,7 @@
             </div>
         </article>
 
-        <article id="badminton">
+        <article class="article2">
             <h2>Le sport</h2>
             <p>Je fais du badminton depuis 2 ans (enfin entre 2 confinements!)....
                 D'ailleurs l'un de mes <a href="#">projet</a>  évolue autour de cette pratique
