--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
         <h1>leeroy nico - Dév Web</h1>
     </header>
 
-    <div id="section"> <!-- pour appliquer flexbox -->
+    <div id="section"> 
         <aside>
-            <h2>Développeur Web Full Stack</h2>
-            <p>Curieux, sérieux et rigoureux....pour le reste je vous laisse naviguer !</p>
+            <h2>Développeur Web Full Stack </h2>
+            <p>Curieux, sérieux et rigoureux....j'entreprends actuellement une
+                formation qualifiante de développeut Web et Web mobile Full stack ! 
+            </p>
             <div class="reseaux">
                 <a href="mailto:leeroynicolas62@gmail.com">leeroynicolas62@gmail.com</a>
                 <a href="https://www.linkedin.com/in/nico-leeroy/" target="blank">
@@ -38,7 +40,7 @@
 
         <nav>
             <ul id="menu">
-                <li><a href="projet.html" id="projets">mes projets</a></li>
+                <li><a href="projets.html" id="projets">mes projets</a></li>
                 <li><a href="#" id="comp">mes compétences</a></li>
                 <li><a href="#" id="exp">mon exp pro</a></li>
                 <li><a href="mieuxmeconnaitre.html" id="meconnaître">mieux me connaître</a></li>
