--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <h1>leeroy nico - Dév Web</h1>
     </header>
 
+    
+
     <div id="section"> 
         <aside>
             <h2>Développeur Web Full Stack </h2>
@@ -34,6 +36,9 @@
                 <a href="https://github.com/leeroynico" target="blank">
                     <img src="github.png" alt="githublogo">
                 </a>
+                <a href="https://nicolas-leroy.welovedevs.com/" target="blank">
+                    <img src="welovedevlogo.png" alt="welovedevlogo">
+                </a>
             </div>
            
         </aside>
@@ -41,8 +46,8 @@
         <nav>
             <ul id="menu">
                 <li><a href="projets.html" id="projets">mes projets</a></li>
-                <li><a href="#" id="comp">mes compétences</a></li>
-                <li><a href="#" id="exp">mon exp pro</a></li>
+                <li><a href="competences.html" id="comp">mes compétences</a></li>
+                <li><a href="exppro.html" id="exp">mon exp pro</a></li>
                 <li><a href="mieuxmeconnaitre.html" id="meconnaître">mieux me connaître</a></li>
             </ul>
         </nav>
