--- a/mieuxmeconnaitre.html
+++ b/mieuxmeconnaitre.html
@@ -21,10 +21,19 @@
             <ul id="menuhaut">
                 <li><a href="index.html" id="home">home</a></li>
                 <li><a href="projets.html" id="projets">mes projets</a></li>
-                <li><a href="#" id="comp">mes compétences</a></li>
+                <li><a href="competences.html" id="comp">mes compétences</a></li>
                 <li><a href="#" id="exp">mon exp pro</a></li>  
             </ul>
     </header>
+
+  
+        <div class="intro">
+         <p>Issu du spectacle vivant, je suis actuellement en e-learning "Graduate Développeur web full stack" 
+         avec l'école "Studi - Digital Education". Entre ma formation et mon ancien boulot de technicien du spectacle
+         voilà deux de mes passions.</p>
+ 
+        </div>
+    
 
    <section> 
         <article class="article1">
