--- a/competences.html
+++ b/competences.html
@@ -41,18 +41,18 @@
      <div class="article1">
         <div class="competencesnow">
         <h3>Mes compétences / technologies</h3>
-        <img src="images competences/comp.png" alt="diagrame">
+        <img src="images_competences/comp.png" alt="diagrame">
         </div>
     </div>
 
     <div class="article2">
         <h3>Les compétences à venir</h3>
             <div class="competencesfutures">
-            <img src="images projets/php.png" alt="php" id="php">
-            <img src="images projets/WordPress.png" alt="wordpress" id="wordpress">
-            <img src="images competences/react native .png" alt="reactN" id="reactN">
-            <img src="images competences/react.png" alt="react" id="react">
-            <img src="images competences/symfony.png" alt="symfony" id="symfony">
+            <img src="images_projets/php.png" alt="php" id="php">
+            <img src="images_projets/WordPress.png" alt="wordpress" id="wordpress">
+            <img src="images_competences/react native .png" alt="reactN" id="reactN">
+            <img src="images_competences/react.png" alt="react" id="react">
+            <img src="images_competences/symfony.png" alt="symfony" id="symfony">
             </div>
     </div>
 </section>
