--- a/mieuxmeconnaitre.html
+++ b/mieuxmeconnaitre.html
@@ -22,7 +22,7 @@
                 <li><a href="index.html" id="home">home</a></li>
                 <li><a href="projets.html" id="projets">mes projets</a></li>
                 <li><a href="competences.html" id="comp">mes compétences</a></li>
-                <li><a href="#" id="exp">mon exp pro</a></li>  
+                <li><a href="exppro.html" id="exp">mon exp pro</a></li>  
             </ul>
     </header>
 
