--- a/mieuxmeconnaitre.html
+++ b/mieuxmeconnaitre.html
@@ -7,6 +7,7 @@
         <title>Nicolas Leroy - mieux me connaître</title>
         <link rel="stylesheet" href="styleportfolio.css" />
         <link rel="stylesheet" href="styleportfolio2.css">
+        <link rel="stylesheet" href="responsive.css">
         <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
     </head>
 
@@ -55,7 +56,7 @@
         <article class="article2">
             <h2>Le sport</h2>
             <p>Je fais du badminton depuis 2 ans (enfin entre 2 confinements!)....
-                D'ailleurs l'un de mes <a href="#">projet</a>  évolue autour de cette pratique
+                D'ailleurs l'un de mes <a href="#">projets</a>  évolue autour de cette pratique
                 afin d'améliorer les échanges entre  tous les joueurs (même de différent niveaux)...</p>
                 <img src="badminton.jpeg" alt="badminton" id="fotobad"> 
         </article>
