--- a/exppro.html
+++ b/exppro.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="styleportfolio.css" />
         <link rel="stylesheet" href="styleportfolio2.css">
         <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
-          
+        <link rel="stylesheet" href="responsive.css">
     
     </head>
 
