fail link resolve

--- a/projets.html
+++ b/projets.html
@@ -36,7 +36,7 @@
           <p>Ma première réalisation depuis que j'ai découvert les joies 
             du HTML & CSS".</p>
           <p>Le <a href="https://github.com/leeroynico/portfolio/tree/gh-pages">lien </a>
-            pour le "Github" du site.</p>
+            pour le "Github" du projet.</p>
           <div>
           <a href="index.html" id="home"><img src="images_projets/portofoliobd.png" alt="monsite"></a>
           </div>
