--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="description et réalisations des projets du développeur Web Nicolas Leroy">
         <title>leeroynico- Web Developer</title>
         <link rel="stylesheet" href="styleportfolio.css" />
         <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
@@ -15,7 +16,7 @@
 <body>
     <header>
         <div class="photoprofile">
-        <img src="imagecvbd.png" alt="">
+        <img src="imagecvbd.png" alt="moi">
         </div>
         <h1>leeroy nico - Dév Web</h1>
     </header>
