fix error link and add link

--- a/projets.html
+++ b/projets.html
@@ -23,7 +23,7 @@
             <ul id="menuhaut">
                 <li><a href="index.html" id="home">home</a></li>
                 <li><a href="competences.html" id="comp">mes compétences</a></li>
-                <li><a href="#" id="exp">mon exp pro</a></li>
+                <li><a href="competences.html" id="exp">mon exp pro</a></li>
                 <li><a href="mieuxmeconnaitre.html" id="exp">me connaître</a></li>
             </ul>
             
@@ -64,7 +64,7 @@
               maitriser mieux encore le framework Bootstrap.
           </p>
           <div>
-            <a href="#" id="chat"><img src="images_projets/tof.png" alt="tof"></a>
+            <a href="https://leeroynico.github.io/tof-photo/" id="chat" target="blank"><img src="images_projets/tof.png" alt="tof"></a>
             </div>
           <img src="images_projets/css.png" alt="css3">
           <img src="images_projets/html5.png" alt="html5">
