add link wordpress

--- a/projets.html
+++ b/projets.html
@@ -78,7 +78,7 @@
           mais cette fois pour dompter Wordpress.
         </p>
         <div>
-          <a href="#" id="series"><img src="images_projets/serie.jpeg" alt="series"></a>
+          <a href="https://nicolasleroy62.wordpress.com/" id="series" target="blank"><img src="images_projets/serie.jpeg" alt="series"></a>
           </div>
         <img src="images_projets/WordPress.png" alt="wordpress">
     </article>
