--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="description et réalisations des projets du développeur Web Nicolas Leroy">
+        <meta name="description" content="description et réalisations des projets de développeur Web Nicolas Leroy">
         <title>leeroynico- Web Developer</title>
         <link rel="stylesheet" href="styleportfolio.css" />
         <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Nerko+One&family=Teko:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="responsive.css">
+        <link rel="icon" type="image/png" href="imagecvbd.png" >
+
     </head>
 
 <body>
