change projets page content

--- a/projets.html
+++ b/projets.html
@@ -45,13 +45,16 @@
       </article>
 
       <article class="article2">
-          <h2>Championnat interne de bad (à venir)</h2>
+          <h2>Championnat interne de bad</h2>
           <p>Dans notre club de Badminton, les niveaux sont très disparates. Avec l'équipe 
             de direction, nous avons donc pensé à un championnat interne où chacun peut s'inscrire et où un 
             handicap de points sera donné au prorata de la différence du classement "fédé" des joueurs.
           </p>
+          <div>
+            <a href="https://leeroynico.github.io/BCL/" id="badmintonprojet" target="blank"><img src="images_projets/badprojet.png" alt="badmintonprojet"></a>
+            </div>
           
-          <img src="images_projets/css.png" alt="css3">
+          <img src="images_projets/bootstrap.png" alt="bootstrap">
           <img src="images_projets/html5.png" alt="html5">
           <img src="images_projets/JS.png" alt="js">
           <img src="images_projets/php.png" alt="php" id="php">
@@ -59,12 +62,12 @@
       </article>
 
       <article class="article3">
-          <h2>Site WEB - artiste photographe (en cours)</h2>
-          <p>Site Web pour un photographe amateur, qui me permettra de 
+          <h2>Site WEB - Les spéculos</h2>
+          <p>Site Web pour une compagnie de théâtre amateur, qui me permettra de 
               maitriser mieux encore le framework Bootstrap.
           </p>
           <div>
-            <a href="https://leeroynico.github.io/tof-photo/" id="chat" target="blank"><img src="images_projets/tof.png" alt="tof"></a>
+            <a href="https://leeroynico.github.io/lesspeculos/" id="lesspeculos" target="blank"><img src="images_projets/tof.png" alt="tof"></a>
             </div>
           <img src="images_projets/css.png" alt="css3">
           <img src="images_projets/html5.png" alt="html5">
@@ -73,12 +76,11 @@
      
 
       <article class="article4">
-        <h2>Site WEB - Mes séries (à suivre)</h2>
-        <p>Encore un site Web (conscré aux séries que je dévore... quand je ne code pas!)
-          mais cette fois pour dompter Wordpress.
+        <h2>e commerce click 'N Collect</h2>
+        <p>Voila un 'fake' site e-commerce réalisé lors de mon stage chez diggit-all
         </p>
         <div>
-          <a href="https://nicolasleroy62.wordpress.com/" id="series" target="blank"><img src="images_projets/serie.jpeg" alt="series"></a>
+          <a href="https://click-and-collect-5.diggit-all.fr" id="exommerce" target="blank"><img src="images_projets/eshopprojet.png" alt="ecommerce"></a>
           </div>
         <img src="images_projets/WordPress.png" alt="wordpress">
     </article>
