fix prjets images issue

--- a/projets.html
+++ b/projets.html
@@ -67,7 +67,7 @@
               maitriser mieux encore le framework Bootstrap.
           </p>
           <div>
-            <a href="https://leeroynico.github.io/lesspeculos/" id="lesspeculos" target="blank"><img src="images_projets/tof.png" alt="tof"></a>
+            <a href="https://leeroynico.github.io/lesspeculos/" id="lesspeculos" target="blank"><img src="images_projets/lesspeculosprojet.png" alt="tof"></a>
             </div>
           <img src="images_projets/css.png" alt="css3">
           <img src="images_projets/html5.png" alt="html5">
